--- a/package.json
+++ b/package.json
@@ -26,13 +26,21 @@
     "@ionic/storage": "2.1.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "magnet-link": "^1.1.3",
+    "nodejs-mobile-cordova": "^0.2.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "webtorrent": "^0.102.4",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.0",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "nodejs-mobile-cordova": {}
+    }
+  }
 }
